Fixed word wrapping styling problem for suggestion entry

--- a/src/styles.css
+++ b/src/styles.css
@@ -110,7 +110,7 @@ p {
 
 .individual-suggestion {
   border-bottom: 2px solid rgb(74, 124, 148);
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .suggestion-info {
